// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Calendar/> props showMonthCnt correctly 1`] = `
<div
  className="calendar"
  style={
    Object {
      "left": undefined,
      "top": undefined,
    }
  }
>
  <div
    className="calendar__list"
  >
    <div
      className="calendar__item"
      key="0"
    >
      <CalendarContainer
        base={"2018-12-01T00:00:00.000Z"}
        current={"2018-12-01T00:00:00.000Z"}
        headerFormat="YYYY년 MM월"
        nextIcon={false}
        onNext={[Function]}
        onPrev={[Function]}
        prevIcon={true}
        show={true}
        showMonthCnt={3}
      />
    </div>
    <div
      className="calendar__item"
      key="1"
    >
      <CalendarContainer
        base={"2018-12-01T00:00:00.000Z"}
        current={"2019-01-01T00:00:00.000Z"}
        headerFormat="YYYY년 MM월"
        nextIcon={false}
        onNext={[Function]}
        onPrev={[Function]}
        prevIcon={false}
        show={true}
        showMonthCnt={3}
      />
    </div>
    <div
      className="calendar__item"
      key="2"
    >
      <CalendarContainer
        base={"2018-12-01T00:00:00.000Z"}
        current={"2019-02-01T00:00:00.000Z"}
        headerFormat="YYYY년 MM월"
        nextIcon={true}
        onNext={[Function]}
        onPrev={[Function]}
        prevIcon={false}
        show={true}
        showMonthCnt={3}
      />
    </div>
  </div>
</div>
`;

exports[`<Calendar/> props top, left correctly 1`] = `
<div
  className="calendar"
  style={
    Object {
      "left": "100px",
      "top": "100px",
    }
  }
>
  <div
    className="calendar__list"
  >
    <div
      className="calendar__item"
      key="0"
    >
      <CalendarContainer
        base={"2018-12-01T00:00:00.000Z"}
        current={"2018-12-01T00:00:00.000Z"}
        headerFormat="YYYY년 MM월"
        left="100px"
        nextIcon={true}
        onNext={[Function]}
        onPrev={[Function]}
        prevIcon={true}
        show={true}
        showMonthCnt={1}
        top="100px"
      />
    </div>
  </div>
</div>
`;

exports[`<Calendar/> redners with no props 1`] = `
<div
  className="calendar"
  style={
    Object {
      "left": undefined,
      "top": undefined,
    }
  }
>
  <div
    className="calendar__list"
  >
    <div
      className="calendar__item"
      key="0"
    >
      <CalendarContainer
        base={"2018-12-01T00:00:00.000Z"}
        current={"2018-12-01T00:00:00.000Z"}
        headerFormat="YYYY년 MM월"
        nextIcon={true}
        onNext={[Function]}
        onPrev={[Function]}
        prevIcon={true}
        show={true}
        showMonthCnt={1}
      />
    </div>
  </div>
</div>
`;
